minor fixes: left-align name and absolute URL

--- a/home/resume.less
+++ b/home/resume.less
@@ -357,6 +357,8 @@ i[lang] {font-family: inherit;}
   .res-Name {
     .fontsize-block-lrg;
     font-weight: bold;
+    text-align: inherit;
+    text-transform: uppercase;
   }
   .res-SkillTitle {
     .fontsize-block-lrg;
